Improved batch files.